# small

./: .gitignore  LICENSE  README.md  default.nix  pyproject.toml  result  shell.nix
src/: add.py  small.py
templates/DEFAULT/: .gitignore  LICENSE  README.md  default.nix  pyproject.toml  shell.nix
templates/DEFAULT/src/: [.BASE_NAME.].py  add.py
